# yamaha-rcp-osc-bridge

./: .gitignore  .npmrc  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
src/: App.tsx  common.rs  index.css  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: conversion_tests.rs
