[package]
name = "yamaha-rcp-to-osc"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
rosc = "0.11.4"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
