[package]
name = "yamaha-rcp-to-osc-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7"
yamaha-rcp-to-osc = { path = ".." }

[build-dependencies]
tauri-build = { version = "2", features = [] }
